# DEZoomCamp_Homework_01

./: .gitignore  Dockerfile  Homework_ptB.txt  docker-compose.yml  ingest_csv_to_postgres.py  ingest_ny_taxi_data.ipynb  ingest_ny_taxi_data.py  pyproject.toml  torun.md
init_scripts/: init-schemas.sql
