[tool.poetry]
name = "working"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.5.2"
pandas = "^1.5.2"
sqlalchemy = "^1.4.46"
psycopg2-binary = "^2.9.5"


[tool.poetry.dev-dependencies]
black = "^22.12.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

